tests/snapshots/run_wpt_conformance__coreml_prelu_float32_broadcast_5D_x_5D_slope_with_expanded_output_shape.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 broadcast 5D x 5D slope with expanded output shape, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { tensor<fp32, [?]>, tensor<fp16, [?]> }; got tensor<fp32, [1, 2, 1, 1, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f32[2, 1, 1, 2, 3];
  }

  consts {
    operand_1: f32[1, 2, 1, 1, 1] @bytes([214, 93, 160, 64, 18, 40, 246, 62]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
