tests/snapshots/run_wpt_conformance__coreml_quantizeLinear_float32_tensor_with_int32_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 tensor with int32 zeroPoint, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type quantize: Param 'zero_point' has incorrect type for operator 'ios17.quantize'. Expected { tensor<int8, [...]>, tensor<uint8, [...]> }; got tensor<int32, [2]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_2: i32[2] @bytes([89, 126, 0, 0, 78, 176, 218, 255]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
