tests/snapshots/run_wpt_conformance__coreml_reciprocal_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reciprocal.https.any.js reciprocal float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983310029_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([11, 188, 159, 68, 214, 64, 120, 200, 178, 194, 103, 200, 106, 72, 147, 70, 164, 70, 94, 65, 161, 196, 224, 198, 190, 188, 169, 59, 117, 37, 180, 53, 212, 68, 64, 61, 32, 72, 134, 178, 133, 200, 249, 72, 197, 200, 34, 173]);
  }

  nodes {
    [reciprocalOutput] = reciprocal(operand_0, label="");
  }

  outputs { reciprocalOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983310029_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
