tests/snapshots/run_wpt_conformance__coreml_reciprocal_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reciprocal.https.any.js reciprocal float16 4D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reciprocalInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reciprocalInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reciprocalOutput] = reciprocal(reciprocalInput, label="");
  }

  outputs { reciprocalOutput; }
}
