tests/snapshots/run_wpt_conformance__coreml_reduceL1_float16_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float16 0D constant tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature reduceL1Input is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([130, 69]);
  }

  nodes {
    [reduceL1Output] = reduceL1(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
